# shambit_travels_api_backend

./: .access_token  .env.example  .env.railway  .flake8  .gitignore  .refresh_token  ADMIN_TAX_GUIDE.md  CI_CD_SETUP_COMPLETE.md  CI_CD_STATUS_UPDATE.md  CRITICAL_FIX_APPLIED.md  DATA_FLOW_DIAGRAM.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FLAKE8_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  IMAGE_FIX_CHANGES.md  IMAGE_LOADING_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MEDIA_ADMIN_500_FIX.md  Procfile  QUICK_DEPLOY.md  QUICK_START_GUIDE.md  QUICK_START_SMS.md  RAILWAY_ENV_VARIABLES.txt  RAILWAY_HEALTH_CHECK_FIX.md  README.md  REQUIREMENTS_FIX_SUMMARY.md  SMS_PASSWORD_RESET.md  UI_MOCKUPS.md  VEHICLE_OPTIMIZATION_README.md  all_endpoints.json  cookies.txt  debug_db.py  diagnose_startup.py  docker-compose.monitoring.yml  docker-compose.yml  force_migrate.py  generate_vapid_keys.py  health_check.py  (+30 more)
.github/: dependabot.yml
backend/: admin.py  health.py  storage_backends.py  swagger_views.py  urls.py  wsgi.py
docs/: ADMIN_MEDIA_GUIDE.md  ADMIN_QUICK_GUIDE_EXPERIENCES.md  API_TESTING_GUIDE.md  AUTHENTICATION_FIX.md  BUILD_SUMMARY.md  CITY_SEARCH_ANALYSIS.md  CITY_SEARCH_IMPLEMENTATION_SUMMARY.md  CI_CD_STATUS_UPDATE.md  DAY6-7_TESTING_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_PHASE1.md  DEPLOYMENT_STATUS.md  EXPERIENCES_COMPREHENSIVE_ANALYSIS.md  EXPERIENCES_EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FREE_EXPERIENCES_DEPLOYMENT_CHECKLIST.md  FREE_EXPERIENCES_IMPLEMENTATION.md  FREE_EXPERIENCES_SUMMARY.md  FRONTEND_IMPLEMENTATION_ROADMAP.md  (+28 more)
(+215 files in other folders)
