[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.venv_cls_repro
  | venv
  | env
  | _build
  | buck-out
  | build
  | dist
  | site-packages
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = [".venv_cls_repro", "venv", "env", "site-packages"]
skip_glob = ["**/migrations/*"]
known_django = "django"
known_first_party = ["apps", "backend"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]